# src/controllers/event.controller.ts
@@ -1,13 +1,13 @@
 import { Response } from "express";
 import { IPaginationQuery, IReqUser } from "../utils/interface";
 import response from "../utils/response";
-import EventModel, { eventDAO, TEvent } from "../models/event.model";
+import EventModel, { eventDAO, TypeEvent } from "../models/event.model";
 import { FilterQuery, isValidObjectId } from "mongoose";
 
 export default {
   async create(req: IReqUser, res: Response) {
     try {
-      const payload = {...req.body, createdBy: req.user?.id} as TEvent;
+      const payload = {...req.body, createdBy: req.user?.id} as TypeEvent;
       await eventDAO.validate(payload);
       const result = await EventModel.create(payload);
       response.success(res, result, "success create event");
@@ -18,32 +18,43 @@ export default {
 
   async findAll(req: IReqUser, res: Response) {
     try {
-      const {limit = 10, page = 1, search} = req.query as unknown as IPaginationQuery;
+
+      const buildQuery = (filter:any) => {
+        let query : FilterQuery<TypeEvent> = {};
+
+        if (filter.search) query.$text = { $search: filter.search };
+        if (filter.category) query.category = filter.category;
+        if (filter.isOnline) query.isOnline = filter.isOnline;
+        if (filter.isFeatured) query.isFeatured = filter.isFeatured;
+        if (filter.isPublish) query.isPublish = filter.isPublish;
+
+        return query;
+      };
+
+      const { limit = 10, page = 1, search, category, isOnline, isFeatured, isPublish } =
+        req.query;
+
+      const query = buildQuery({
+        search,
+        category,
+        isOnline,
+        isFeatured,
+        isPublish,
+      });
       
-      const query : FilterQuery<TEvent> = {}
-
-      if(search) {
-        Object.assign(query, {
-          ...query,
-          $text: {
-            $search: search,
-          },
-        });
-      }
-
       const result = await EventModel.find(query)
-      .limit(limit)
-      .skip((page - 1) * limit)
+      .limit(+limit)
+      .skip((+page - 1) * +limit)
       .sort({createdAt: -1})
+      .lean()
       .exec();
       const count = await EventModel.countDocuments(query);
 
       response.pagination(res, result, {
-        current: page,
+        current: +page,
         total : count,
-        totalPage: Math.ceil(count / limit),
-      }, "success fetch all events"
-    );
+        totalPage: Math.ceil(count / +limit),
+      }, "success fetch all events");
 
     } catch (error) {
       response.error(res, error, "failed to find all events");
